--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -149,6 +149,9 @@ img
   padding: 0px;
 }
 
+.no-min-height {
+  min-height: 0;
+}
 .row .no-gutter
 {
   padding-left:0px;
@@ -2668,7 +2671,7 @@ h3.aside-title {
 .nav-tabs-profile {
   position: relative;
   z-index: 10;
-  margin-top: -48px;
+  margin-top: -46px;
   padding-left:15px;
   border-bottom:1px solid @hdc-gray;
 }
@@ -2678,7 +2681,8 @@ h3.aside-title {
 .nav-tabs-profile > li > a,
 .nav-tabs-profile-edit  > li > a
 {
-  font-size:1.3em;
+  font-size:1.2em;
+  font-weight:bold;
   color:@hdc-dark-gray;
   border-top:2px solid @hdc-gray;
   border-left:1px solid @hdc-gray;
