My Bookings are now corrects

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -105,7 +105,7 @@ h1,h2,h3,h4,h5,h6{
   font-weight:normal;
 }
 h1{
-  font-size:36px;
+  font-size:32px;
 }
 h2{
   font-size:26px;
@@ -2850,6 +2850,21 @@ h3.aside-title {
 {
   border-color:@hdc-orange;
   z-index:100;
+}
+
+// My bookings
+.booking-panel-title-link,
+.booking-panel-title-link:hover,{
+  color:@hdc-black;
+}
+.booking-panel-title-link .panel-heading {
+  background-color:@hdc-light-gray;
+}
+.booking-panel-title {
+  color:@hdc-black;
+}
+.booking-panel-title .green-icon {
+  color:@hdc-green;
 }
 
 // Blog
