--- a/app/views/event/bookingSuccessDetails.scala.html
+++ b/app/views/event/bookingSuccessDetails.scala.html
@@ -1,7 +1,7 @@
 @(eventBookingSuccess: EventBookingSuccess)(implicit messages: Messages)
 
 
-<ul class="list-group big-margin-top">
+<ul class="list-group">
     <li class="list-group-item">
         <div class="row">
             <div class="col-md-3"><strong>@Messages("event.book.success.event-name")</strong></div>
