Bugfixes for event registration

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -821,6 +821,7 @@ input[type="reset"]:hover
   margin:0px 10px 0px 10px;
 }
 .event-guest-info {
+  margin-top:5px;
   border-bottom: 1px solid @hdc-light-gray;
 }
 .event-header {
