Removed warnings or SBT

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -926,7 +926,16 @@ input[type="reset"]:hover
   margin-top: 20px;
 }
 
-// Event Image gallery
+// Edit & Add event
+#edit-date-time .date-row {
+  margin-bottom:10px;
+}
+#edit-date-time .date-row .remove-button {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+  // Event Image gallery
 .modal-event-image-gallery-dialog {
   width:800px;
 }
