Added basic form checks for Suggestion and Booking

--- a/app/views/event/bookingTimeList.scala.html
+++ b/app/views/event/bookingTimeList.scala.html
@@ -7,7 +7,7 @@
             <li>
                 <div class="row">
                     <div class="col-xs-12 col-sm-3">
-                        <div class="month">@customUtils.Helpers.formatDateGetMonthAsText(theDate, "long")</div>
+                        <div class="month">@customUtils.Helpers.formatDateGetMonthAsText(theDate, "short")</div>
                         <div class="day-of-month">@customUtils.Helpers.formatDateGetDayOfMonth(theDate)</div>
                         <div class="year">@customUtils.Helpers.formatDateGetYear(theDate)</div>
                     </div>
