Remade the startpage

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -413,6 +413,10 @@ input[type="reset"]:hover
 {
   padding:20px;
 }
+.btn-xl {
+  font-size:2.5rem;
+  padding:35px;
+}
 .btn-no-margin
 {
   margin:0px;
@@ -571,7 +575,7 @@ input[type="reset"]:hover
 {
   text-align: left;
   padding-top:1em;
-  display: block;
+  display: none;
   clear:both;
   color:@hdc-gray;
   font-size:10px;
@@ -2015,6 +2019,13 @@ input[type="reset"]:hover
 .panel-startpage-intro .panel-body {
   padding-top: 50px;
 }
+.panel-startpage-aside {
+  border:0;
+}
+.panel-startpage-aside h2.aside-title {
+  margin-top:0px;
+  margin-bottom:20px;
+}
 .panel-startpage-aside .panel-body img {
   max-width: 100%;
   height:auto;
@@ -2025,6 +2036,10 @@ input[type="reset"]:hover
 }
 .startpage-head {
   margin:0px 0px 20px 0px;
+}
+
+.page-header-small-margin-top {
+  margin-top:20px;
 }
 .startpage-video {
   position: relative;
@@ -2043,6 +2058,16 @@ input[type="reset"]:hover
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+// News
+.col-news {
+  border:1px solid @hdc-light-green;
+  background-color: @hdc-light-gray;
+  padding-top: 20px;
+}
+.col-news img {
+  max-width: 100%;
 }
 
 .hdc-pin-orange {
