--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -6,6 +6,7 @@
         profileBoxes: Option[List[models.viewmodels.ProfileBox]],
         reviewBoxes: Option[List[models.viewmodels.ReviewBox]],
         asideNews: Option[List[models.content.ContentPage]],
+        news: Option[List[models.content.ContentPage]],
         currentUser: Option[UserCredential])(implicit request: RequestHeader, messages: Messages)
 
 @scripts = {
@@ -15,189 +16,72 @@
 
 @main(Messages("startpage.title"), footerScripts = scripts.asInstanceOf[play.twirl.api.Html]) {
 
-        @*Working carousel, disabled
-        <div id="carousel-startpage" class="carousel slide" data-ride="carousel" data-interval="4000">
-
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-startpage" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-startpage" data-slide-to="1"></li>
-            <li data-target="#carousel-startpage" data-slide-to="2"></li>
-            <li data-target="#carousel-startpage" data-slide-to="3"></li>
-            <li data-target="#carousel-startpage" data-slide-to="4"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item active">
-                @shared.img("images/startpage/startpage-carousel-image-03.jpg", alt = "")
-                <div class="carousel-caption green-bg right-align animated fadeInRightBig">
-                    <h2>Home Dining Club</h2>
-                    <p>Vad är det?</p>
-                    <p><a class="btn btn-lg btn-primary" href="@routes.UserProfileController.viewProfileByLoggedInUser()" role="button">Bli medlem!</a></p>
-                </div>
-            </div>
-            <div class="item">
-                @shared.img("images/startpage/startpage-carousel-image-04.jpg", alt = "")
-                <div class="carousel-caption green-bg right-align animated fadeInRightBig">
-                    <h2>Slipp Disken</h2>
-                    <p>Ät hemma hos någon!</p>
-                    <p><a class="btn btn-lg btn-primary" href="@routes.UserProfileController.viewProfileByLoggedInUser()" role="button">Hur fungerar det?</a></p>
-                </div>
-            </div>
-            <div class="item">
-                @shared.img("images/startpage/startpage-carousel-image-02.jpg", alt = "")
-            </div>
-            <div class="item">
-                @shared.img("images/startpage/startpage-carousel-image-05.jpg", None, None, "")
-                <div class="carousel-caption green-bg left-align animated fadeInLeftBig">
-                    <h2>Men kom ut någon gång!</h2>
-                    <p>Sitt inte bara där!</p>
-                </div>
-            </div>
-            <div class="item">
-                @shared.img("images/startpage/startpage-carousel-image-06.jpg", alt = "")
-                <div class="carousel-caption animated fadeInLeftBig">
-                    <h2>Introduktions video</h2>
-                    <iframe src="//player.vimeo.com/video/97540915?title=1&amp;byline=1&amp;portrait=1&amp;color=fafafa&amp;autoplay=0" width="293" height="165" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                </div>
-            </div>
-        </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-startpage" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="right carousel-control" href="#carousel-startpage" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-    </div>*@
-
-
     <div class="container maincontent-container">
+
         <div class="row margin-top">
-            <div class="col-xs-12 col-md-push-3 col-md-6">
-                <!-- Video -->
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h1 class="startpage-head text-center hidden">@Messages("startpage.main-content.header")</h1>
-                        @play.twirl.api.Html(Messages("startpage.main-content.body"))
-                        <div class="startpage-video">
-                            <iframe src="//player.vimeo.com/video/97540915?title=0&amp;byline=0&amp;portrait=0&amp;color=6fc2b5&amp;autoplay=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                        </div>
-
-                        @if(currentUser.isEmpty) {
-                            <p><a class="btn btn-primary btn-lg btn-big-padding btn-block" role="button" href="@securesocial.controllers.routes.LoginPage.login">@Messages("startpage.main-content.body.btn.signup")</a></p>
-                        }
-                    </div>
-                </div>
-
-                <div class="row">
-                    <!-- Filtering push -->
-                    <div class="col-xs-12 form-filter animated fadeIn">
-                    @helper.form(action=routes.StartPageController.index(), 'class -> "form-horizontal"){
-                        <div class="form-group">
-                            @if(optionsFoodAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fTag"), optionsFoodAreas.get, '_label -> Messages("filterform.foodarea"), 'class -> "form-control") </div>}
-                            @if(optionsLocationAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fCounty"), optionsLocationAreas.get, '_label -> Messages("filterform.area"), 'class -> "form-control") </div> }
-                            <div class="col-xs-12 col-sm-2 no-margin-top"><button class="btn btn-primary btn-filter-event" type="submit">@Messages("filterform.submit")</button></div>
-                        </div>
-                        }
-                    </div>
-                </div>
-
-                <!-- Event boxes -->
-                <div class="row">
-                    @if(eventBoxes.isDefined){
-                        @startpage.eventBox(eventBoxes.get)
-                    }else{
-                        <div class="col-xs-12 text-center">@play.twirl.api.Html(Messages("startpage.boxes.not-found", routes.StartPageController.index().url))</div>
-                    }
-                    <div class="col-xs-12 text-center"><a class="btn btn-primary btn-lg btn-big-padding btn-cta" role="button" href="@routes.BrowsePageController.browseEvents()">@Messages("startpage.main.browse-event.link.text")</a></div>
-                </div>
-
-                <!-- Filtering push -->
-                <div class="row">
-                    <div class="col-xs-12 big-margin-top form-filter animated fadeIn">
-                    @helper.form(action=routes.StartPageController.index(), 'class -> "form-horizontal"){
-                        <div class="form-group">
-                            @* @helper.inputText(searchForm("freeText"), '_label -> Messages("filterform.freetext")) *@
-                            @if(optionsFoodAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fTag"), optionsFoodAreas.get, '_label -> Messages("filterform.foodarea"), 'class -> "form-control") </div>}
-                            @if(optionsLocationAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fCounty"), optionsLocationAreas.get, '_label -> Messages("filterform.area"), 'class -> "form-control") </div> }
-                            @if(optionsIsHost.nonEmpty){ <div class="col-xs-12 col-sm-2"> @helper.checkbox(searchForm("fHost"), '_label -> Messages("filterform.is-host"), '_help -> "", '_showErrors -> false, 'class -> "") </div> }
-                            <div class="col-xs-12 no-margin-top"><button class="btn btn-primary no-margin-top" type="submit">@Messages("filterform.submit")</button></div>
-                        </div>
-                    }
-                    </div>
-                </div>
-                <!-- Profile boxes -->
-                <div class="row">
-                    @if(profileBoxes.isDefined){
-                        @startpage.profileBox(profileBoxes.get)
-                    }else{
-                        <div class="col-xs-12 text-center">@play.twirl.api.Html(Messages("startpage.boxes.not-found", routes.StartPageController.index().url))</div>
-                    }
-                    <div class="col-xs-12 text-center"><a class="btn btn-primary btn-lg btn-big-padding btn-cta" role="button" href="@routes.BrowsePageController.browseProfiles()">@Messages("startpage.main.browse.link.text")</a></div>
-                </div>
-
-                @if(currentUser.isEmpty) {
-                <!-- CTA -->
-                <div class="row">
-                    <div class="col-xs-12 big-margin-top panel-cta">
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-7 col-cta"><p class="text-cta">@Messages("startpage.main.cta.text")</p></div>
-                            <div class="col-xs-12 col-sm-5 col-cta text-right"><a class="btn btn-primary btn-lg btn-big-padding btn-cta" role="button" href="@securesocial.controllers.routes.LoginPage.login">@Messages("startpage.main.cta.link.text")</a></div>
-                        </div>
-                    </div>
-                </div>
-                }
-
-                @if(reviewBoxes.nonEmpty){
-                <!-- Reviews -->
-                <div class="row">
-                        <div class="col-xs-12"><h2 class="page-header">@Messages("startpage.reviews.users.header")</h2></div>
-                        @shared.reviewBox(reviewBoxes.get)
-                </div>
-                }
-
-                @if(currentUser.isEmpty) {
-                <div class="row">
-                    <div class="col-xs-12">
-                            <p><a class="btn btn-primary btn-lg btn-big-padding btn-block" role="button" href="@securesocial.controllers.routes.LoginPage.login">@Messages("startpage.main-content.body.btn.signup")</a></p>
-                    </div>
-                </div>
-                }
-
+            <div class="col-xs-12 col-md-7">
+                @startpage.video(currentUser)
+            </div>
+            <div class="col-xs-12 col-md-5">
+                @startpage.asideNews(asideNews)
             </div>
 
-            <div class="col-xs-12 col-md-pull-6 col-md-3">
-                <aside>
-                    @if(asideNews.nonEmpty) {
-                        @for(content <- asideNews.get){
-                                <!-- Content -->
-                            <div class="panel panel-dropshadow panel-default panel-startpage-aside">
-                                <div class="panel-body">
-                                    @if(content.title.nonEmpty) {
-                                        <h3 class="aside-title">@content.title</h3>
-                                    }
-                                    @play.twirl.api.Html(content.preamble)
-                                    @play.twirl.api.Html(content.mainBody)
-                                </div>
-                            </div>
-                        }
-                    }
-                </aside>
-            </div>
+            @if(currentUser.isEmpty) {
+                <div class="col-xs-12 col-sm-10 col-sm-push-1">
+                    <p><a class="btn btn-primary btn-lg btn-big-padding btn-block" role="button" href="@securesocial.controllers.routes.LoginPage.login">@Messages("startpage.main-content.body.btn.signup")</a></p>
+                </div>
+            }
 
-            <div class="col-xs-12 col-md-3">
-                @startpage.wizardButtons()
-                @startpage.wizardModals()
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <h2 class="page-header page-header-small-margin-top"><span class="glyphicon glyphicon-calendar"></span>&nbsp;@Messages("event.event-list.header")</h2>
             </div>
-
-            <!-- Banner -->
+            <div class="col-xs-12 col-md-9">
+                @startpage.eventFiltering(searchForm, optionsFoodAreas, optionsLocationAreas)
+                @startpage.eventList(eventBoxes)
+            </div>
             <div class="col-xs-12 col-md-3 col-banner">
                 @shared.banner()
             </div>
         </div>
+
+        @if(currentUser.isEmpty) {
+            <!-- CTA -->
+            <div class="row big-margin-top">
+                <div class="col-xs-12 col-sm-10 col-sm-push-1 panel-cta">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-7 col-cta"><p class="text-cta">@Messages("startpage.main.cta.text")</p></div>
+                        <div class="col-xs-12 col-sm-5 col-cta text-right"><a class="btn btn-primary btn-lg btn-big-padding btn-cta" role="button" href="@securesocial.controllers.routes.LoginPage.login">@Messages("startpage.main.cta.link.text")</a></div>
+                    </div>
+                </div>
+            </div>
+        }
+
+        <div class="row">
+            <div class="col-xs-12 col-md-6">
+                @if(reviewBoxes.nonEmpty){
+                    <!-- Reviews -->
+                    <div class="row">
+                        <div class="col-xs-12"><h2 class="page-header"><span class="glyphicon glyphicon-star-empty"></span>&nbsp;@Messages("startpage.reviews.users.header")</h2></div>
+                        @shared.reviewBox(reviewBoxes.get)
+                    </div>
+                }
+                @startpage.news(news)
+                @if(currentUser.isEmpty) {
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <p><a class="btn btn-primary btn-lg btn-big-padding btn-block" role="button" href="@securesocial.controllers.routes.LoginPage.login">@Messages("startpage.main-content.body.btn.signup")</a></p>
+                        </div>
+                    </div>
+                }
+            </div>
+            <div class="col-xs-12 col-md-6">
+                @startpage.profileFiltering(searchForm, optionsFoodAreas, optionsLocationAreas, optionsIsHost)
+                @startpage.profileList(profileBoxes)
+            </div>
+        </div>
+
     </div>
 
 }
