--- a/app/views/startpage/asideNews.scala.html
+++ b/app/views/startpage/asideNews.scala.html
@@ -4,7 +4,7 @@
   <aside>
   @for(content <- asideNews.get){
     <!-- Content -->
-    <div class="panel panel-dropshadow panel-default panel-startpage-aside hidden-xs">
+    <div class="panel panel-dropshadow panel-default panel-startpage-aside hidden-xs hidden-sm">
       <div class="panel-body">
         @if(content.title.nonEmpty) {
           <h2 class="aside-title">@content.title</h2>
