Fixed white bg on recipe And banner area on all non startpages

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -575,7 +575,7 @@ input[type="reset"]:hover
 {
   text-align: left;
   padding-top:1em;
-  display: none;
+  display: block;
   clear:both;
   color:@hdc-gray;
   font-size:10px;
