--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -42,7 +42,7 @@
                 @startpage.eventList(eventBoxes)
             </div>
             <div class="col-xs-12 col-md-3 col-banner">
-                @shared.banner()
+                @shared.banner(showBannerHeader = false)
             </div>
         </div>
 
