--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -13,6 +13,7 @@
 
 @eventScripts = {
     <script src="@routes.Assets.at("js/libs/twitter-bootstrap-wizard-1.0.0/jquery.bootstrap.wizard.min.js")"></script>
+    <script src="@routes.Assets.at("js/app/event-helpers.js")"></script>
     <script src="@routes.Assets.at("js/app/event-booking.js")"></script>
     <script src="@routes.Assets.at("js/app/event-date-suggestion.js")"></script>
     <script src="@routes.Assets.at("js/app/event-image-gallery.js")"></script>
