Replaced current GA implementation Tried to fix HTTPS-support for fonts Also tried to fixed JS-bug for jQuery validator

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -3,7 +3,7 @@
 @import "gray.less";
 @import "star-rating.min.less";
 @import "genericons.less";
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic);
 
 
 // Variables
@@ -2021,6 +2021,7 @@ input[type="reset"]:hover
 }
 .panel-startpage-aside {
   border:0;
+  box-shadow:none;
 }
 .panel-startpage-aside h2.aside-title {
   margin-top:0px;
