--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,6 +19,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         @header.meta(metaData)
         <script src="@routes.Assets.at("js/libs/jquery.1.11.1.min.js")"></script>
+        <script src="@routes.Assets.at("js/libs/jquery-validation-1.14.0/dist/jquery.validate.min.js")"></script>
         <link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" />
         <link rel="stylesheet" href="@routes.Assets.at("js/libs/bootstrap-datetimepicker-4.17.37/build/css/bootstrap-datetimepicker.min.css")" />
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.min.css")">
@@ -44,11 +45,18 @@
         <script src="@routes.Assets.at("js/libs/jquery.collapser.2.0.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/star-rating.2.0.0.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/bootbox.4.3.0.min.js")"></script>
-        <script src="@routes.Assets.at("js/libs/jquery-validation-1.14.0/dist/jquery.validate.min.js")"></script>
+
         <script src="@routes.Assets.at("js/libs/moment-2.10.6/min/moment-with-locales.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/bootstrap-datetimepicker-4.17.37/build/js/bootstrap-datetimepicker.min.js")"></script>
         @views.html.file.fileScripts()
         <script src="@routes.Assets.at("js/site.js")"></script>
+
+        @* Migrates in 2.5 to play.api.Environment *@
+        @if(play.Play.isProd) {
+            <script src="@routes.Assets.at("js/app/ga-prod.js")"></script>
+        }else {
+            <script src="@routes.Assets.at("js/app/ga-test.js")"></script>
+        }
         <script src="@routes.Assets.at("js/app/tinymce-init.js")"></script>
         <script src="@routes.Assets.at("js/app/confirm-alerts.js")"></script>
         <script src="@routes.Assets.at("js/app/json-requests.js")"></script>
