--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -12,6 +12,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="@routes.Assets.at("js/libs/jquery.1.11.1.min.js")"></script>
+        <script src="@routes.Assets.at("js/libs/jquery-validation-1.14.0/dist/jquery.validate.min.js")"></script>
         <link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" />
         <link rel="stylesheet" href="@routes.Assets.at("js/libs/bootstrap-datetimepicker-4.17.37/build/css/bootstrap-datetimepicker.min.css")" />
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.min.css")">
@@ -44,14 +45,13 @@
 
         @footerHtml
 
-        @*TODO - Create controllers with local backups, also bundle *@
+        @*TODO - Bundle *@
         <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
         <script src="@routes.Assets.at("tinymce/tinymce.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/jquery.gray.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/jquery.collapser.2.0.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/star-rating.2.0.0.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/bootbox.4.3.0.min.js")"></script>
-        <script src="@routes.Assets.at("js/libs/jquery-validation-1.14.0/dist/jquery.validate.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/moment-2.10.6/min/moment-with-locales.min.js")"></script>
         <script src="@routes.Assets.at("js/libs/bootstrap-datetimepicker-4.17.37/build/js/bootstrap-datetimepicker.min.js")"></script>
         @views.html.file.fileScripts()
